pkgs/dartcv_core/src/imgproc.h

// Erodes an image by using a specific structuring element.
// void cv::erode (InputArray src, OutputArray dst, InputArray kernel, Point anchor=Point(-1,-1), int iterations=1, int borderType=BORDER_CONSTANT, const Scalar &borderValue=morphologyDefaultBorderValue())
CvStatus *Erode(Mat src, Mat dst, Mat kernel);
CvStatus *ErodeWithParams(
    Mat src, Mat dst, Mat kernel, Point anchor, int iterations, int borderType, Scalar borderValue
);
// Convolves an image with the kernel.
// void cv::filter2D (InputArray src, OutputArray dst, int ddepth, InputArray kernel, Point anchor=Point(-1,-1), double delta=0, int borderType=BORDER_DEFAULT)
CvStatus *
Filter2D(Mat src, Mat dst, int ddepth, Mat kernel, Point anchor, double delta, int borderType);
CvStatus *EllipseWithParams(
    Mat img,
    Point center,
    Point axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    int lineType,
    int shift
);
// Approximates an elliptic arc with a polyline.
// void cv::ellipse2Poly (Point center, Size axes, int angle, int arcStart, int arcEnd, int delta, std::vector< Point > &pts)
// void cv::ellipse2Poly (Point2d center, Size2d axes, int angle, int arcStart, int arcEnd, int delta, std::vector< Point2d > &pts)


// Fills a convex polygon.
// void cv::fillConvexPoly (InputOutputArray img, InputArray points, const Scalar &color, int lineType=LINE_8, int shift=0)
// void cv::fillConvexPoly (InputOutputArray img, const Point *pts, int npts, const Scalar &color, int lineType=LINE_8, int shift=0)

// Fills the area bounded by one or more polygons.
// void cv::fillPoly (InputOutputArray img, const Point **pts, const int *npts, int ncontours, const Scalar &color, int lineType=LINE_8, int shift=0, Point offset=Point())
// void cv::fillPoly (InputOutputArray img, InputArrayOfArrays pts, const Scalar &color, int lineType=LINE_8, int shift=0, Point offset=Point())
CvStatus *FillPoly(Mat img, VecVecPoint points, Scalar color);
CvStatus *FillPolyWithParams(
    Mat img, VecVecPoint points, Scalar color, int lineType, int shift, Point offset
);
// Computes the "minimal work" distance between two weighted point configurations.
// float cv::EMD (InputArray signature1, InputArray signature2, int distType, InputArray cost=noArray(), float *lowerBound=0, OutputArray flow=noArray())

// Equalizes the histogram of a grayscale image.
// void cv::equalizeHist (InputArray src, OutputArray dst)
CvStatus *EqualizeHist(Mat src, CVD_OUT Mat dst);
// Creates a smart pointer to a cv::GeneralizedHoughBallard class and initializes it.
// Ptr< GeneralizedHoughBallard > cv::createGeneralizedHoughBallard ()

// Creates a smart pointer to a cv::GeneralizedHoughGuil class and initializes it.
// Ptr< GeneralizedHoughGuil > cv::createGeneralizedHoughGuil ()

// Finds contours in a binary image.
// void cv::findContours (InputArray image, OutputArrayOfArrays contours, int mode, int method, Point offset=Point())
// void cv::findContours (InputArray image, OutputArrayOfArrays contours, OutputArray hierarchy, int mode, int method, Point offset=Point())
CvStatus *FindContours(Mat src, Mat hierarchy, int mode, int method, VecVecPoint *rval);
// Find contours using link runs algorithm.
// void cv::findContoursLinkRuns (InputArray image, OutputArrayOfArrays contours)
// void cv::findContoursLinkRuns (InputArray image, OutputArrayOfArrays contours, OutputArray hierarchy)

// Fits an ellipse around a set of 2D points.
// RotatedRect cv::fitEllipse (InputArray points)
CvStatus *FitEllipse(VecPoint pts, RotatedRect *rval);
// Fits an ellipse around a set of 2D points.
// RotatedRect cv::fitEllipseAMS (InputArray points)

// Fits an ellipse around a set of 2D points.
// RotatedRect cv::fitEllipseDirect (InputArray points)

// Fits a line to a 2D or 3D point set.
// void cv::fitLine (InputArray points, OutputArray line, int distType, double param, double reps, double aeps)
CvStatus *FitLine(VecPoint pts, Mat line, int distType, double param, double reps, double aeps);