packages/dartcv/lib/src/g/imgproc.g.dart


  late final _EllipseWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvPoint,
              CvPoint,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              Scalar,
              ffi.Int,
              ffi.Int,
              ffi.Int)>>('EllipseWithParams');
  late final _EllipseWithParams = _EllipseWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, double, double,
          double, Scalar, int, int, int)>();

  ffi.Pointer<CvStatus> EllipseWithParams_Async(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    imp1.CvCallback_0 callback,
  ) {
    return _EllipseWithParams_Async(
      img,
      center,
      axes,
      angle,
      startAngle,
      endAngle,
      color,
      thickness,
      lineType,
      shift,
      callback,
    );
  }

  late final _EllipseWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvPoint,
              CvPoint,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              Scalar,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              imp1.CvCallback_0)>>('EllipseWithParams_Async');
  late final _EllipseWithParams_Async = _EllipseWithParams_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, double, double,
          double, Scalar, int, int, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> Ellipse_Async(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    imp1.CvCallback_0 callback,
  ) {
    return _Ellipse_Async(
      img,
      center,
      axes,
      angle,
      startAngle,
      endAngle,
      color,
      thickness,
      callback,
    );
  }

  late final _Ellipse_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvPoint,
              CvPoint,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              Scalar,
              ffi.Int,
              imp1.CvCallback_0)>>('Ellipse_Async');
  late final _Ellipse_Async = _Ellipse_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, double, double,
          double, Scalar, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> EqualizeHist(
    Mat src,
    Mat dst,
  ) {
    return _EqualizeHist(
      src,
      dst,
    );
  }

  late final _EqualizeHistPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'EqualizeHist');
  late final _EqualizeHist =
      _EqualizeHistPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> EqualizeHist_Async(
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _EqualizeHist_Async(
      src,
      callback,
    );
  }

  late final _EqualizeHist_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, imp1.CvCallback_1)>>('EqualizeHist_Async');
  late final _EqualizeHist_Async = _EqualizeHist_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Erode(
    Mat src,
    Mat dst,
    Mat kernel,
  ) {
    return _Erode(
      src,
      dst,
      kernel,
    );
  }

  late final _ErodePtr = _lookup<
      ffi
      .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>('Erode');
  late final _Erode =
      _ErodePtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> ErodeWithParams(
    Mat src,
    Mat dst,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
  ) {
    return _ErodeWithParams(
      src,
      dst,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
    );
  }

  late final _ErodeWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvPoint, ffi.Int,
              ffi.Int, Scalar)>>('ErodeWithParams');
  late final _ErodeWithParams = _ErodeWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, CvPoint, int, int, Scalar)>();

  ffi.Pointer<CvStatus> ErodeWithParams_Async(
    Mat src,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    imp1.CvCallback_1 callback,
  ) {
    return _ErodeWithParams_Async(
      src,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
      callback,
    );
  }

  late final _ErodeWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, CvPoint, ffi.Int, ffi.Int,
              Scalar, imp1.CvCallback_1)>>('ErodeWithParams_Async');
  late final _ErodeWithParams_Async = _ErodeWithParams_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, CvPoint, int, int, Scalar, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Erode_Async(
    Mat src,
    Mat kernel,
    imp1.CvCallback_1 callback,
  ) {
    return _Erode_Async(
      src,
      kernel,
      callback,
    );
  }

  late final _Erode_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_1)>>('Erode_Async');
  late final _Erode_Async = _Erode_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FillPoly(
    Mat img,
    VecVecPoint points,
    Scalar color,
  ) {
    return _FillPoly(
      img,
      points,
      color,
    );
  }

  late final _FillPolyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, VecVecPoint, Scalar)>>('FillPoly');
  late final _FillPoly = _FillPolyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, Scalar)>();

  ffi.Pointer<CvStatus> FillPolyWithParams(
    Mat img,
    VecVecPoint points,
    Scalar color,
    int lineType,
    int shift,
    CvPoint offset,
  ) {
    return _FillPolyWithParams(
      img,
      points,
      color,
      lineType,
      shift,
      offset,
    );
  }

  late final _FillPolyWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, Scalar, ffi.Int,
              ffi.Int, CvPoint)>>('FillPolyWithParams');
  late final _FillPolyWithParams = _FillPolyWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecVecPoint, Scalar, int, int, CvPoint)>();

  ffi.Pointer<CvStatus> FillPolyWithParams_Async(
    Mat img,
    VecVecPoint points,
    Scalar color,
    int lineType,
    int shift,
    CvPoint offset,
    imp1.CvCallback_0 callback,
  ) {
    return _FillPolyWithParams_Async(
      img,
      points,
      color,
      lineType,
      shift,
      offset,
      callback,
    );
  }

  late final _FillPolyWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              VecVecPoint,
              Scalar,
              ffi.Int,
              ffi.Int,
              CvPoint,
              imp1.CvCallback_0)>>('FillPolyWithParams_Async');
  late final _FillPolyWithParams_Async =
      _FillPolyWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, Scalar, int, int,
              CvPoint, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> FillPoly_Async(
    Mat img,
    VecVecPoint points,
    Scalar color,
    imp1.CvCallback_0 callback,
  ) {
    return _FillPoly_Async(
      img,
      points,
      color,
      callback,
    );
  }

  late final _FillPoly_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, VecVecPoint, Scalar, imp1.CvCallback_0)>>('FillPoly_Async');
  late final _FillPoly_Async = _FillPoly_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecVecPoint, Scalar, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> Filter2D(
    Mat src,
    Mat dst,
    int ddepth,
    Mat kernel,
    CvPoint anchor,
    double delta,
    int borderType,
  ) {
    return _Filter2D(
      src,
      dst,
      ddepth,
      kernel,
      anchor,
      delta,
      borderType,
    );
  }

  late final _Filter2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, Mat, CvPoint,
              ffi.Double, ffi.Int)>>('Filter2D');
  late final _Filter2D = _Filter2DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, Mat, CvPoint, double, int)>();

  ffi.Pointer<CvStatus> Filter2D_Async(
    Mat src,
    int ddepth,
    Mat kernel,
    CvPoint anchor,
    double delta,
    int borderType,
    imp1.CvCallback_1 callback,
  ) {
    return _Filter2D_Async(
      src,
      ddepth,
      kernel,
      anchor,
      delta,
      borderType,
      callback,
    );
  }

  late final _Filter2D_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, Mat, CvPoint, ffi.Double,
              ffi.Int, imp1.CvCallback_1)>>('Filter2D_Async');
  late final _Filter2D_Async = _Filter2D_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, Mat, CvPoint, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FindContours(
    Mat src,
    Mat hierarchy,
    int mode,
    int method,
    ffi.Pointer<VecVecPoint> rval,
  ) {
    return _FindContours(
      src,
      hierarchy,
      mode,
      method,
      rval,
    );
  }

  late final _FindContoursPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int,
              ffi.Pointer<VecVecPoint>)>>('FindContours');
  late final _FindContours = _FindContoursPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, int, ffi.Pointer<VecVecPoint>)>();

  ffi.Pointer<CvStatus> FindContours_Async(
    Mat src,
    int mode,
    int method,
    imp1.CvCallback_2 callback,
  ) {
    return _FindContours_Async(
      src,
      mode,
      method,
      callback,
    );
  }

  late final _FindContours_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, imp1.CvCallback_2)>>('FindContours_Async');
  late final _FindContours_Async = _FindContours_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> FitEllipse(
    VecPoint pts,
    ffi.Pointer<RotatedRect> rval,
  ) {
    return _FitEllipse(
      pts,
      rval,
    );
  }

  late final _FitEllipsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<RotatedRect>)>>('FitEllipse');
  late final _FitEllipse = _FitEllipsePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<RotatedRect>)>();

  ffi.Pointer<CvStatus> FitEllipse_Async(
    VecPoint pts,
    imp1.CvCallback_1 callback,
  ) {
    return _FitEllipse_Async(
      pts,
      callback,
    );
  }

  late final _FitEllipse_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, imp1.CvCallback_1)>>('FitEllipse_Async');
  late final _FitEllipse_Async = _FitEllipse_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FitLine(
    VecPoint pts,
    Mat line,
    int distType,
    double param,
    double reps,
    double aeps,
  ) {
    return _FitLine(
      pts,
      line,
      distType,
      param,
      reps,
      aeps,
    );
  }
